--- a/prototypes/current/spark-external-participant-space-privacy.html
+++ b/prototypes/current/spark-external-participant-space-privacy.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Spark 2017.1.24</title>
+  <title>Spark External Participant Space Privacy</title>
 <meta charset='utf-8'>
 <link rel="icon" type="image/x-icon" href="../../img/fav.ico">
 <meta name="viewport" content="width=device-width,minimal-ui,initial-scale=1.0" />
@@ -117,7 +117,7 @@
 		</li>
 	
 		<li>
-				<a href='../../prototypes/current/spark20170124.html' >Spark20170124</a>
+				<a href='../../prototypes/current/spark-external-participant-space-privacy.html' >Spark External Participant Space Privacy</a>
 		</li>
 	
 </ul>
@@ -130,27 +130,24 @@
         <div class="section">
           <article class='article'>
 	<header class='article_header'>
-		<h1>Spark 2017.1.24</h1>
+		<h1>Spark External Participant Space Privacy</h1>
 	</header>
 	<div class='article_body'>
 		<h3 id="mobile-prototype">Mobile Prototype</h3>
-<p><a href="https://uxccds.github.io/SparkMobile/SparkMobileP5/spark.html">spark.html</a></p>
-<h3 id="desktop-prototype">Desktop Prototype</h3>
-<p><a href="https://uxccds.github.io/Spark-Hype-MVO/Spark-MVO-Prototype-currentBuild.html">Spark-MVO-Prototype-currentBuild.html</a></p>
-<h1 id="instuctions-for-use">Instuctions for use</h1>
+<p><a href="https://uxccds.github.io/SparkMobile/ExternalParticipant/SpacePrivacy.html">https://uxccds.github.io/SparkMobile/ExternalParticipant/SpacePrivacy.html</a></p>
+<h1 id="instuctions">Instuctions</h1>
 <h3 id="on-mobile">On Mobile</h3>
-<p>1) Please use Chrome (mobile mode) or iPhone (webapp mode) to view the prototype.</p>
-<p>2) Try clear browser cache first if you encounter any issue.</p>
-<h3 id="on-desktop">On Desktop</h3>
-<p>1) Please use Chrome to view this prototype.</p>
+<p>1) Please use Chrome (mobile mode) or IPhone (webapp mode) to view the prototype.</p>
+<p>2) Try clear browser cache first if you see any issues.</p>
+<p>3) Choose a version to continue.</p>
 		
 	</div>
 	<!-- hiding pagination per Damon's feedback 
 	<footer class='article_footer'>
 
 		<div class="pagination">
-			<a  class="prev" href="spark-obtp.html">← Prev</a>
-			 	 	
+			
+			<a  class="next" href="spark-pairing.html">Next →</a> 	 	
 		</div>		
 	</footer>-->
 </article>
@@ -162,13 +159,13 @@
     <ul class='sideMenu'>
 	
 	
-		<li><a   href='spark-external-participant-space-privacy.html'>Spark External Participant Space Privacy</a></li>
+		<li><a class=current  href='spark-external-participant-space-privacy.html'>Spark External Participant Space Privacy</a></li>
 	
 		<li><a   href='spark-pairing.html'>Spark Pairing 2017</a></li>
 	
 		<li><a   href='spark-obtp.html'>Spark OBTP 2017</a></li>
 	
-		<li><a class=current  href='spark20170124.html'>Spark 2017.1.24</a></li>
+		<li><a   href='spark20170124.html'>Spark 2017.1.24</a></li>
 	
 	
 </ul>-->
