--- a/prototypes/current/spark-pairing.html
+++ b/prototypes/current/spark-pairing.html
@@ -140,13 +140,9 @@
 <h3 id="mx800-prototype">MX800 Prototype</h3>
 <p><a href="https://uxccds.github.io/SparkMobile/pair/page/sparkboardpair.html">https://uxccds.github.io/SparkMobile/pair/page/sparkboardpair.html</a></p>
 <h1 id="instuctions-for-use">Instuctions for use</h1>
-<p>&lt;section class=&quot;groupimg&quot;&gt;
-<img src="../../img_data/prototypes/Mobile-2x.png" alt="mobile"/>
+<p><img src="../../img_data/prototypes/Mobile-2x.png" alt="mobile"/>
 <img src="../../img_data/prototypes/Desktop-2x.png" alt="Desktop"/>
-<img src="../../img_data/prototypes/MX800-2x.png" alt="MX800"/>
-&lt;/section&gt;
-
-</p>
+<img src="../../img_data/prototypes/MX800-2x.png" alt="MX800"/></p>
 <h3 id="on-mobile">On Mobile</h3>
 <ol>
 <li><p>Please use Chrome (mobile mode) or IPhone (webapp mode) to view the prototype.</p>
@@ -178,7 +174,7 @@
 	<footer class='article_footer'>
 
 		<div class="pagination">
-			
+			<a  class="prev" href="spark-external-participant-space-privacy.html">← Prev</a>
 			<a  class="next" href="spark-obtp.html">Next →</a> 	 	
 		</div>		
 	</footer>-->
@@ -190,6 +186,8 @@
     <!--
     <ul class='sideMenu'>
 	
+	
+		<li><a   href='spark-external-participant-space-privacy.html'>Spark External Participant Space Privacy</a></li>
 	
 		<li><a class=current  href='spark-pairing.html'>Spark Pairing 2017</a></li>
 	
