--- a/index.html
+++ b/index.html
@@ -11,6 +11,17 @@
 <!--
 <link rel="stylesheet" type="text/css" href="./css/github_gist.css" media="screen"> -->
 <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700" rel="stylesheet">
+<script>
+  if(location.host == 'uxccds.github.io'){
+	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+	  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+	  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+	  ga('create', 'UA-99987509-1', 'auto');
+	  ga('send', 'pageview');  	
+  }
+</script>
 <script type="text/javascript" src="./js/jquery-2.0.0.min.js"></script>
 <script type="text/javascript" src="./js/highlight.pack.js"></script>
 
@@ -26,7 +37,7 @@
   <!-- nav -->
   <header class="header">
   	<div class="NavContent">
-	    <a href="/" class="logo"><img src="./img/logo.png"></a>
+	    <a href="/" class="logo"><img src="./img/20170808/logo.svg"><span>Prototype</span><span class="orange">Depot</span></a>
 	    <input class="menu-btn" type="checkbox" id="menu-btn" />
 	    <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
 		<ul class="Nav">
@@ -116,8 +127,8 @@
       <!--content blocks -->
       <div class="block-wrapper">
       <a class="sectionBlock" href="./prototypes/index.html">
-        <div class="block-a" style="background-image:url('./img//watercolor/experimental2.jpg')"> 
-        <div class="block_coverA">
+        <div class="block-a" style="background-image:url('./img/20170808/prototype.svg')"> 
+        <div class="block_cover">
         <p class="list_title">Prototypes</p>
         </div>
       </div>
@@ -125,16 +136,16 @@
       </div>
       <div class="block-wrapper">
       <a class="sectionBlock" href="./research/index.html">
-        <div class="block-l" style="background-image:url('./img//watercolor/research.jpg')"> 
+        <div class="block-l" style="background-image:url('./img/20170808/research.svg')"> 
         <div class="block_cover">
-        <p class="list_title">Research</p>
+        <p class="list_title">RESEARCH & DEVELOPMENT</p>
         </div>
         </div>
       </a>
-      <a class="sectionBlock" href="./team/index.html"> 
-        <div class="block-r" style="background-image:url('./img//watercolor/team.jpg')">
+      <a class="sectionBlock" href="./team/index.html">
+        <div class="block-r" style="background-image:url('./img/20170808/team.svg')">
         <div class="block_cover">
-        <p class="list_title">Team</p>
+        <p class="list_title">TEAM MEMBERS</p>
         </div>
       </div>
       </a>
