--- a/prototypes/archived/index.html
+++ b/prototypes/archived/index.html
@@ -11,6 +11,17 @@
 <!--
 <link rel="stylesheet" type="text/css" href="../../css/github_gist.css" media="screen"> -->
 <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700" rel="stylesheet">
+<script>
+  if(location.host == 'uxccds.github.io'){
+	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+	  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+	  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+	  ga('create', 'UA-99987509-1', 'auto');
+	  ga('send', 'pageview');  	
+  }
+</script>
 <script type="text/javascript" src="../../js/jquery-2.0.0.min.js"></script>
 <script type="text/javascript" src="../../js/highlight.pack.js"></script>
 
@@ -21,7 +32,7 @@
   <body>
       <header class="header">
   	<div class="NavContent">
-	    <a href="/" class="logo"><img src="../../img/logo.png"></a>
+	    <a href="/" class="logo"><img src="../../img/20170808/logo.svg"><span>Prototype</span><span class="orange">Depot</span></a>
 	    <input class="menu-btn" type="checkbox" id="menu-btn" />
 	    <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
 		<ul class="Nav">
@@ -209,9 +220,7 @@
                  
               </div>
               <!-- end of list items -->        
-              <div class='pagination'>
-               Page <a href="index.html" class="current">1</a>
-              </div>    
+              <div class='pagination'><a href="index.html" class="current">1</a></div>    
             </div>
             </div>
         </div>
