--- a/prototypes/current/spark-obtp.html
+++ b/prototypes/current/spark-obtp.html
@@ -11,6 +11,17 @@
 <!--
 <link rel="stylesheet" type="text/css" href="../../css/github_gist.css" media="screen"> -->
 <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700" rel="stylesheet">
+<script>
+  if(location.host == 'uxccds.github.io'){
+	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+	  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+	  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+	  ga('create', 'UA-99987509-1', 'auto');
+	  ga('send', 'pageview');  	
+  }
+</script>
 <script type="text/javascript" src="../../js/jquery-2.0.0.min.js"></script>
 <script type="text/javascript" src="../../js/highlight.pack.js"></script>
 <style type="text/css"></style>
@@ -23,7 +34,7 @@
   <!-- nav -->
   <header class="header">
   	<div class="NavContent">
-	    <a href="/" class="logo"><img src="../../img/logo.png"></a>
+	    <a href="/" class="logo"><img src="../../img/20170808/logo.svg"><span>Prototype</span><span class="orange">Depot</span></a>
 	    <input class="menu-btn" type="checkbox" id="menu-btn" />
 	    <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
 		<ul class="Nav">
@@ -134,6 +145,7 @@
 	<header class='article_header'>
 		<h1>Spark OBTP</h1>
 		
+		
 	</header>
 	<div class='article_body'>
 		<h4 id="mobile-prototype">Mobile Prototype</h4>
@@ -205,6 +217,14 @@ The parameter&#39;s value can be &#39;CCDS&#39;, &#39;UE&#39;, &#39;UT&#39;, &#3
     <!--
     <ul class='sideMenu'>
 	
+	
+		<li><a   href='filter-and-search.html'>Filter and Search</a></li>
+	
+		<li><a   href='information-architecture-p2.html'>IA (Flagpole)</a></li>
+	
+		<li><a   href='information-architecture.html'>IA (Phase 1)</a></li>
+	
+		<li><a   href='pstn.html'>PSTN</a></li>
 	
 		<li><a   href='spark-pairing.html'>Spark Device Pairing</a></li>
 	
