--- a/prototypes/current/spark-pairing.html
+++ b/prototypes/current/spark-pairing.html
@@ -11,6 +11,17 @@
 <!--
 <link rel="stylesheet" type="text/css" href="../../css/github_gist.css" media="screen"> -->
 <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700" rel="stylesheet">
+<script>
+  if(location.host == 'uxccds.github.io'){
+	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+	  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+	  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+	  ga('create', 'UA-99987509-1', 'auto');
+	  ga('send', 'pageview');  	
+  }
+</script>
 <script type="text/javascript" src="../../js/jquery-2.0.0.min.js"></script>
 <script type="text/javascript" src="../../js/highlight.pack.js"></script>
 <style type="text/css"></style>
@@ -23,7 +34,7 @@
   <!-- nav -->
   <header class="header">
   	<div class="NavContent">
-	    <a href="/" class="logo"><img src="../../img/logo.png"></a>
+	    <a href="/" class="logo"><img src="../../img/20170808/logo.svg"><span>Prototype</span><span class="orange">Depot</span></a>
 	    <input class="menu-btn" type="checkbox" id="menu-btn" />
 	    <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
 		<ul class="Nav">
@@ -134,6 +145,7 @@
 	<header class='article_header'>
 		<h1>Spark Device Pairing</h1>
 		
+		
 	</header>
 	<div class='article_body'>
 		<h4 id="mobile-prototype">Mobile Prototype</h4>
@@ -147,18 +159,15 @@
 <img src="../../img_data/prototypes/Desktop-2x.png" alt="Desktop"/>
 <img src="../../img_data/prototypes/SparkBoard-2x.png" alt="SparkBoard"/></p>
 <h3 id="on-mobile">On Mobile</h3>
-<ol>
-<li><p>For the most optimal experience, use Chrome (mobile mode) or IPhone (webapp mode) to view this prototype.</p>
-</li>
-<li><p>Select a scenario and continue.</p>
-</li>
-<li><p>If you encounter any issues, clear the  browser cache and reload page.</p>
-</li>
-</ol>
+<p>1) For the most optimal experience, use Chrome (mobile mode) or IPhone (webapp mode) to view this prototype.</p>
+<p>2) Open the Spark Board prototype and then open the mobile prototype. Press the plus icon on the top right to begin pairing. Click on the blue bar that says, “connecting…” to mimic the prototypes being paired.</p>
+<p>3) Select a scenario and continue.</p>
+<p>4) If you encounter any issues, clear the browser cache and reload page.</p>
 <h3 id="on-desktop">On Desktop</h3>
-<ol>
-<li>Please use Chrome browser to view this prototype.</li>
-</ol>
+<p>1) Please use Chrome browser to view this prototype.</p>
+<p>2) Open the Spark Board prototype and then open the desktop prototype. Press the search icon on the top right to begin pairing.</p>
+<p>3) Select a scenario and continue.</p>
+<p>4) If you encounter any issues, clear the browser cache and reload page.</p>
 <h3 id="on-spark-board">On Spark Board</h3>
 <p><em>Disclaimer: This is simulating an experience on the Sparkboard by using a secondary desktop (e.g. Laptop)</em></p>
 <ol>
@@ -178,7 +187,7 @@
 	<footer class='article_footer'>
 
 		<div class="pagination">
-			
+			<a  class="prev" href="pstn.html">← Prev</a>
 			<a  class="next" href="spark-message-list.html">Next →</a> 	 	
 		</div>		
 	</footer>-->
@@ -190,6 +199,14 @@
     <!--
     <ul class='sideMenu'>
 	
+	
+		<li><a   href='filter-and-search.html'>Filter and Search</a></li>
+	
+		<li><a   href='information-architecture-p2.html'>IA (Flagpole)</a></li>
+	
+		<li><a   href='information-architecture.html'>IA (Phase 1)</a></li>
+	
+		<li><a   href='pstn.html'>PSTN</a></li>
 	
 		<li><a class=current  href='spark-pairing.html'>Spark Device Pairing</a></li>
 	
