--- a/team/index.html
+++ b/team/index.html
@@ -11,6 +11,17 @@
 <!--
 <link rel="stylesheet" type="text/css" href="../css/github_gist.css" media="screen"> -->
 <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700" rel="stylesheet">
+<script>
+  if(location.host == 'uxccds.github.io'){
+	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+	  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+	  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+	  ga('create', 'UA-99987509-1', 'auto');
+	  ga('send', 'pageview');  	
+  }
+</script>
 <script type="text/javascript" src="../js/jquery-2.0.0.min.js"></script>
 <script type="text/javascript" src="../js/highlight.pack.js"></script>
 
@@ -22,7 +33,7 @@
   <!-- nav -->
   <header class="header">
   	<div class="NavContent">
-	    <a href="/" class="logo"><img src="../img/logo.png"></a>
+	    <a href="/" class="logo"><img src="../img/20170808/logo.svg"><span>Prototype</span><span class="orange">Depot</span></a>
 	    <input class="menu-btn" type="checkbox" id="menu-btn" />
 	    <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
 		<ul class="Nav">
@@ -144,9 +155,6 @@
 		</pattern>
 		<pattern id='parrten_azure' x="0" y="0" width="1" height="1" >
 			<image xlink:href='../img_data/avatar/Azure Wang.png' x='0' y='0' width='70' height='70' />
-		</pattern>
-		<pattern id='parrten_kevin' x="0" y="0" width="1" height="1" >
-			<image xlink:href='../img_data/avatar/Kevin Cheong.png' x='0' y='0' width='70' height='70' />
 		</pattern>
 		<pattern id='parrten_fiona' x="0" y="0" width="1" height="1" >
 			<image xlink:href='../img_data/avatar/Fiona Wu.png' x='0' y='0' width='70' height='70' />
@@ -349,13 +357,6 @@
             <p xmlns="http://www.w3.org/1999/xhtml" class='svg_bubble2'>Azure Wang</p>
         </foreignObject>
 	</g>
-	<g id='tf_kevin' style='display:none;'>
-		<path fill="#d81f27" fill-opacity='0.9' stroke="#f5f5f6" stroke-width="2" d="M145 355 l 15 -35 h -15 q -10 0 -10 -10 v -100 q 0 -10 10 -10 h 174 q 10 0 10 10 v 100 q 0 10 -10 10 h -139 l -35 35"></path>
-        <foreignObject x="145" y="210" width="174" height="100">
-            <p xmlns="http://www.w3.org/1999/xhtml" class='svg_bubble'>Doing what you like is freedom, liking what you do is happiness.</p>
-            <p xmlns="http://www.w3.org/1999/xhtml" class='svg_bubble2'>"KC" Kevin Cheong</p>
-        </foreignObject>
-	</g>
 	<g id='tf_fiona' style='display:none;'>
 		<path fill="#f5483f" fill-opacity='0.9' stroke="#f5f5f6" stroke-width="2" d="M110 285 l 15 -35 h -15 q -10 0 -10 -10 v -100 q 0 -10 10 -10 h 174 q 10 0 10 10 v 100 q 0 10 -10 10 h -139 l -35 35"></path>
         <foreignObject x="110" y="140" width="174" height="100">
@@ -372,7 +373,6 @@
 	</g>
 	<circle data-tf='arthus' cx='862' cy='372' r='35' fill='url(#parrten_arthus)' stroke='#C5E9F7' stroke-width='4'></circle>
 	<circle data-tf='azure' cx='937' cy='372' r='35' fill='url(#parrten_azure)' stroke='#C5E9F7' stroke-width='4'></circle>
-	<circle data-tf='kevin' cx='110' cy='390' r='35' fill='url(#parrten_kevin)' stroke='#C5E9F7' stroke-width='4'></circle>
 	<circle data-tf='fiona' cx='75' cy='320' r='35' fill='url(#parrten_fiona)' stroke='#C5E9F7' stroke-width='4'></circle>
 	<circle data-tf='damon' cx='290' cy='375' r='35' fill='url(#parrten_damon)' stroke='#C5E9F7' stroke-width='4'></circle>
 </svg>
@@ -389,15 +389,6 @@
             <q>When the path comes to an end, change.</q>
             <span><strong> - Damon Daood</strong><br>Ninja Prototype Manager</span>
             </footer>
-           </blockquote>
-          </div>
-          <!-- KC -->
-          <div class="teamBio">
-          <div class="bioImg"><img src="../img_data/avatar/Kevin Cheong.png"></div>
-          <blockquote>
-          <q>Doing what you like is freedom, liking what you do is happiness.</q>
-          <footer>
-            <span><strong>- "KC" Kevin Cheong</strong><br>UX Designer/Mobile Prototype</span></footer>
            </blockquote>
           </div>
           <!-- Arthus -->
